--- a/Menu.html
+++ b/Menu.html
@@ -86,7 +86,7 @@
         <div class="container-items">
             <div class="item">
                 <figure>
-                    <img src="image/hambpapa.png" alt="producto" />
+                    <img src="hambpapa.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Combo 1 😩</h2>
@@ -96,7 +96,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/combo2.png" alt="producto" />
+                    <img src="combo2.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Combo 2 🤯</h2>
@@ -106,7 +106,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/sandwich.jpg" alt="producto" />
+                    <img src="sandwich.jpg" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>2 Sandwiches 🫶</h2>
@@ -116,7 +116,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/Hot_dog.jpg" alt="producto" />
+                    <img src="Hot_dog.jpg" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Hot Dog 🔥</h2>
@@ -126,7 +126,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/lasagna.webp" alt="producto" />
+                    <img src="lasagna.webp" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Lasaña 🤩</h2>
@@ -136,7 +136,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/Food-Plate.png" alt="producto" />
+                    <img src="Food-Plate.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Salmón a la plancha 😻</h2>
@@ -146,7 +146,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/gallary_1.jpg" alt="producto" />
+                    <img src="gallary_1.jpg" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Sandwich 👌</h2>
@@ -157,7 +157,7 @@
 
             <div class="item">
                 <figure>
-                    <img src="image/Bate y pelota.png" alt="producto" />
+                    <img src="Bate y pelota.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Combo 3 🤤</h2>
@@ -167,7 +167,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/Muslos bbq.png" alt="producto" />
+                    <img src="Muslos bbq.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Muslos a la BBQ 🥵</h2>
@@ -177,7 +177,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/papafr.png" alt="producto" />
+                    <img src="papafr.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Papas Fritas 🍟</h2>
@@ -187,7 +187,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/arrozfr.png" alt="producto" />
+                    <img src="arrozfr.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Chofan con camarones 🍤</h2>
@@ -199,7 +199,7 @@
 
             <div class="item">
                 <figure>
-                    <img src="image/pasta.png" alt="producto" />
+                    <img src="pasta.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Pasta con Camarones 🍝</h2>
@@ -215,7 +215,7 @@
 
             <div class="item">
                 <figure>
-                    <img src="image/Sushi One Piece.png" alt="producto" />
+                    <img src="Sushi One Piece.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Sushi One Piece 🍥</h2>
@@ -225,7 +225,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/ramen.png" alt="producto" />
+                    <img src="ramen.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Especial de la hoja 🥢🍃</h2>
@@ -236,7 +236,7 @@
 
             <div class="item">
                 <figure>
-                    <img src="image/arrozfr.png" alt="producto" />
+                    <img src="arrozfr.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Chofan con camarones 🍤</h2>
@@ -260,7 +260,7 @@
 
             <div class="item">
                 <figure>
-                    <img src="image/vino.png" alt="producto" />
+                    <img src="vino.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>di Montefalco 🍷, xCopa</h2>
@@ -270,7 +270,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/black.png" alt="producto" />
+                    <img src="black.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Black Label, xVaso</h2>
@@ -280,7 +280,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/2por1.png" alt="producto" />
+                    <img src="2por1.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>2x1 Heineken</h2>
@@ -296,7 +296,7 @@
 
             <div class="item">
                 <figure>
-                    <img src="image/refrescos.png" alt="producto" />
+                    <img src="refrescos.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Refrescos de Chill 🤙</h2>
@@ -306,7 +306,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/Malteadas.png" alt="producto" />
+                    <img src="Malteadas.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Malteadas Ice 🥤</h2>
@@ -316,7 +316,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/jugosn.png" alt="producto" />
+                    <img src="jugosn.png" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Jugos Naturales 😏</h2>
@@ -333,7 +333,7 @@
 
             <div class="item">
                 <figure>
-                    <img src="image/gallary_2.jpg" alt="producto" />
+                    <img src="gallary_2.jpg" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Cupcakes 🧁😏</h2>
@@ -343,7 +343,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/cake.jpg" alt="producto" />
+                    <img src="cake.jpg" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Bizcocho 🎂</h2>
@@ -353,7 +353,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/Spanchi.jpg" alt="producto" />
+                    <img src="Spanchi.jpg" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Cupcake con chispas🧁🍫</h2>
@@ -363,7 +363,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/ice_cream.jpg" alt="producto" />
+                    <img src="ice_cream.jpg" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Helado 🍧</h2>
@@ -373,7 +373,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/chocolate.jpg" alt="producto" />
+                    <img src="chocolate.jpg" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Chocolates Rellenos 🍫</h2>
@@ -383,7 +383,7 @@
             </div>
             <div class="item">
                 <figure>
-                    <img src="image/gallary_3.jpg" alt="producto" />
+                    <img src="gallary_3.jpg" alt="producto" />
                 </figure>
                 <div class="info-product">
                     <h2>Cupcake de chocolate 🧁</h2>
